Numerous fixes (#175)
* change github logo to svg so it's less blurry

* some styles fixes, use system font over montserrat for everything other than headers

* change styles, add aria label

* fix tests

--- a/src/learn/Learn.m.css
+++ b/src/learn/Learn.m.css
@@ -3,7 +3,7 @@
 }
 
 .nav {
-	background: #009dff;
+	background: linear-gradient(110deg, var(--color-purple), var(--color-blue));
 	position: fixed;
 	width: 100%;
 	display: flex;
@@ -107,7 +107,7 @@
 	content: '';
 	width: 100%;
 	height: 4px;
-	background-color: #3c3f4a;
+	background-color: white;
 }
 
 .menuLink::after {
@@ -115,7 +115,7 @@
 	left: 0;
 	content: '';
 	width: 1px;
-	height: 22px;
+	height: 24px;
 	background-color: rgba(18, 18, 18, 0.2);
 }
 
